# paparazzi

./: .flake8  .gitattributes  .gitignore  AI LAB REPORT.docx  README.md  pyproject.toml  requirements.txt
src/papzi/: constants.py  image_dataset.py  models.py  train_model.py  trainer.py  transforms.py  utils.py
src/papzi/data/: .gitignore  classes.json
src/papzi/data/models/: trained.pth
src/papzi/preprocess/: crop.py  normalizer.py  preprocess.py  split_train_validation_data.py
src/papzi/scrapper/: poster_scrapper.py  scrap.py  scrapper.py
src/papzi_gui/: app.py  face_recognizer.py
